--- a/index.html
+++ b/index.html
@@ -1,13 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <script defer src="script.js"></script>
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <title>Expense Tracker App</title>
+  </head>
+  <body>
+    <div class="conatin">
+      <header class="header">
+        <h1 class="heading">Expense Tracker App</h1>
+      </header>
+      <main class="app">
+        <form action="" class="form">
+          <div class="form-feild" data-err="">
+            <label for="expense-name " class="form__label"
+              >Expense Name :</label
+            >
+            <input
+              type="text"
+              class="form__input"
+              id="expense-name"
+              placeholder="Expense Name"
+            />
+          </div>
+
+          <div class="form-feild" data-err="">
+            <label for="expense-amount" class="form__label">
+              Expense Amount :
+            </label>
+            <input
+              type="number"
+              min="1"
+              step="1"
+              pattern="\d+"
+              class="form__input"
+              id="amount"
+              placeholder="Amount"
+            />
+          </div>
+
+          <div class="form-feild" data-err="">
+            <label for="category" class="form__label"> Category : </label>
+            <select name="category" id="category" class="form__input">
+              <option value="" disabled selected>Select Category</option>
+              <option value="food">Food</option>
+              <option value="transportation">Transportation</option>
+              <option value="utilities">Utilities</option>
+              <option value="entertainment">Entertainment</option>
+              <option value="health">Health</option>
+              <option value="other">Other</option>
+            </select>
+          </div>
+          <button type="submit" class="btn">Add Expense</button>
+        </form>
+
+        <form action="" class="form">
+          <select
+            name="filter-category"
+            id="filter-category"
+            class="form__input"
+          >
+            <option value="" disabled selected>Filter by Category</option>
+            <option value="all">All</option>
+            <option value="food">Food</option>
+            <option value="transportation">Transportation</option>
+            <option value="utilities">Utilities</option>
+            <option value="entertainment">Entertainment</option>
+            <option value="health">Health</option>
+            <option value="other">Other</option>
+          </select>
+        </form>
+
+        <table class="table">
+          <thead class="thead">
+            <tr class="tr">
+              <th>Name</th>
+              <th>Amount</th>
+              <th>Date</th>
+              <th>Category</th>
+              <th>Delete</th>
+            </tr>
+          </thead>
+          <tbody class="tbody"></tbody>
+          <tfoot class="tfoot">
+            <tr class="tr">
+              <td colspan="5">
+                Total Expense Amount :
+                <span class="total-expense">00.00</span>
+              </td>
+            </tr>
+          </tfoot>
+        </table>
+      </main>
+    </div>
+  </body>
 </html>
