--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
             <div class="summary-label">Total Items</div>
             <div class="summary-value" id="totalItems">0</div>
           </div>
+          <div class="summary-item">
+            <button id="resetExpenses" class="btn-reset">Reset All</button>
+          </div>
         </div>
 
         <div class="expenses-container" id="expensesContainer">
@@ -106,6 +109,22 @@
           <button id="cancelDelete" class="btn-modal btn-cancel">Cancel</button>
           <button id="confirmDelete" class="btn-modal btn-confirm-delete">
             Delete
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div id="resetModal" class="modal-overlay">
+      <div class="modal-content">
+        <h3>Confirm reset</h3>
+        <p>
+          Are you sure you want to delete ALL expenses? This action cannot be
+          undone.
+        </p>
+        <div class="modal-actions">
+          <button id="cancelReset" class="btn-modal btn-cancel">Cancel</button>
+          <button id="confirmReset" class="btn-modal btn-confirm-delete">
+            Reset
           </button>
         </div>
       </div>
