--- a/index.html
+++ b/index.html
@@ -69,22 +69,35 @@
                 </select>
               </div>
             </div>
-            <button type="submit" class="btn-add">+ Add Expense</button>
+            <div class="form-search-grid">
+              <input
+                type="text"
+                id="searchInput"
+                placeholder="Search expenses..."
+                class="search-expenses"
+              />
+              <!-- <button type="button" id="searchBtn" class="search-btn"></button> -->
+
+              <select name="selectByCategory" id="selectByCategory" class="search-category">
+                <option value="">Search by category</option>
+                <option value="food">Food & Dining</option>
+                <option value="transport">Transport</option>
+                <option value="entertainment">Entertainment</option>
+                <option value="utilities">Utilities</option>
+                <option value="healthcare">Healthcare</option>
+                <option value="shopping">Shopping</option>
+                <option value="other">Other</option>
+              </select>
+
+              <button type="submit" class="btn-add">
+                <span class="plus-icon">+</span> Add Expense
+              </button>
+            </div>
           </form>
         </div>
 
-        <div class="summary">
-          <div class="summary-item">
-            <div class="summary-label">Total Expenses</div>
-            <div class="summary-value" id="totalExpenses">₹0.00</div>
-          </div>
-          <div class="summary-item">
-            <div class="summary-label">Total Items</div>
-            <div class="summary-value" id="totalItems">0</div>
-          </div>
-          <div class="summary-item">
-            <button id="resetExpenses" class="btn-reset">Reset All</button>
-          </div>
+        <div class="search-results-container">
+          <div id="searchResults"></div>
         </div>
 
         <div class="expenses-container" id="expensesContainer">
@@ -99,6 +112,28 @@
           </div>
         </div>
       </div>
+
+      <footer class="footer">
+        <div class="summary">
+          <div class="summary-item">
+            <div class="summary-label">Total Expenses</div>
+            <div class="summary-value" id="totalExpenses">₹0.00</div>
+          </div>
+          <div class="summary-item">
+            <div class="summary-label">Total Items</div>
+            <div class="summary-value" id="totalItems">0</div>
+          </div>
+          <div class="summary-item">
+            <button id="resetExpenses" class="btn-reset">Reset All</button>
+          </div>
+        </div>
+
+        <!-- copyright -->
+
+        <div class="copyright">
+          <p>&copy; 2025 Expense Tracker. All rights reserved by Vatsal Maru</p>
+        </div>
+      </footer>
     </div>
 
     <div id="deleteModal" class="modal-overlay">
