JS test-4 with changes

--- a/index.html
+++ b/index.html
@@ -70,15 +70,21 @@
               </div>
             </div>
             <div class="form-search-grid">
+              
               <input
                 type="text"
                 id="searchInput"
                 placeholder="Search expenses..."
                 class="search-expenses"
               />
+
               <!-- <button type="button" id="searchBtn" class="search-btn"></button> -->
 
-              <select name="selectByCategory" id="selectByCategory" class="search-category">
+              <select
+                name="selectByCategory"
+                id="selectByCategory"
+                class="search-category"
+              >
                 <option value="">Search by category</option>
                 <option value="food">Food & Dining</option>
                 <option value="transport">Transport</option>
